--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "build:web": "expo export --platform web",
+    "serve:web": "npx serve dist",
     "format": "biome check --no-errors-on-unmatched --apply .",
     "db:generate": "bun drizzle-kit generate",
     "expo-check": "bun expo install --check"
